--- a/po/gl.po
+++ b/po/gl.po
@@ -1,16 +1,16 @@
-# Finnish translation for fslint
+# Galician translation for fslint
 # Copyright (c) 2009 Rosetta Contributors and Canonical Ltd 2009
 # This file is distributed under the same license as the fslint package.
-# Otto Kekäläinen <otto@sange.fi>, 2009.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2009.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: fslint\n"
-"Report-Msgid-Bugs-To: \n"
+"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-07-17 22:22+0100\n"
-"PO-Revision-Date: 2009-08-17 06:25+0000\n"
-"Last-Translator: Otto Kekäläinen <otto@sange.fi>\n"
-"Language-Team: Finnish <fi@li.org>\n"
+"PO-Revision-Date: 2009-12-15 12:03+0000\n"
+"Last-Translator: Miguel Anxo Bouzada <mbouzada@gmail.com>\n"
+"Language-Team: Galician <gl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -23,126 +23,126 @@ msgstr "FSlint"
 
 #: ../fslint.glade:77
 msgid "Open _Folder"
-msgstr "Avaa _kansio"
+msgstr "_Abrir cartafol"
 
 #: ../fslint.glade:107
 msgid "_Rename..."
-msgstr "_Nimeä uudelleen..."
+msgstr "_Renomear..."
 
 #: ../fslint.glade:130
 msgid "Select using wildcard"
-msgstr "Valitse käyttäen jokerimerkkiä"
+msgstr "Seleccione usando comodins"
 
 #: ../fslint.glade:139
 msgid "Unselect using wildcard"
-msgstr "Poista valinta käyttäen jokerimerkkiä"
+msgstr "Deseleccione usando comodins"
 
 #: ../fslint.glade:148
 msgid "within groups"
-msgstr "ryhmien sisältä"
+msgstr "dentro dos grupos"
 
 #: ../fslint.glade:157
 msgid "Select all but first"
-msgstr "Valitse kaikki paitsi ensimmäinen"
+msgstr "Seleccione todo, pero o primeiro"
 
 #: ../fslint.glade:166
 msgid "Select all but newest"
-msgstr "Valitse kaikki paitsi uusin"
+msgstr "Seleccione todo, pero o máis novo"
 
 #: ../fslint.glade:175
 msgid "Select all but oldest"
-msgstr "Valitse kaikki paitsi vanhin"
+msgstr "Seleccione todo, pero o máis vello"
 
 #: ../fslint.glade:188
 msgid "Toggle selection"
-msgstr "Vaihda valinta"
+msgstr "Cambiar a selección"
 
 #: ../fslint.glade:197
 msgid "Unselect all"
-msgstr "Tyhjennä valinta"
+msgstr "Deseleccionar todo"
 
 #: ../fslint.glade:314 ../fslint.glade:555
 msgid "Add"
-msgstr "Lisää"
+msgstr "Engadir"
 
 #: ../fslint.glade:386 ../fslint.glade:627
 msgid "Remove"
-msgstr "Poista"
+msgstr "Eliminar"
 
 #: ../fslint.glade:429
 msgid "Directories to search"
-msgstr "Hakemistot joista etsitään"
+msgstr "Directorios para buscar"
 
 #: ../fslint.glade:454
 msgid "recurse?"
-msgstr "rekursiivisesti?"
+msgstr "Recurso?"
 
 #: ../fslint.glade:478
 msgid "Search path"
-msgstr "Hakupolku"
+msgstr "Ruta de busca"
 
 #: ../fslint.glade:678
 msgid "Paths to exclude"
-msgstr "Pois jätettävät polut"
+msgstr "Directorios a excluir"
 
 #: ../fslint.glade:709
 msgid "Extra find parameters"
-msgstr "Haun lisäehdot"
+msgstr "Parámetros extra de busca"
 
 #: ../fslint.glade:730
 msgid "extra find filtering parameters"
-msgstr "Ylimääräiset hakusuodinehdot"
+msgstr "Parámetros extra de filtrado de busca"
 
 #: ../fslint.glade:763
 msgid "Advanced search parameters"
-msgstr "Edistyneet hakuehdot"
+msgstr "Parámetros de busca avanzada"
 
 #: ../fslint.glade:844 ../fslint.glade:959 ../fslint.glade:1206
 #: ../fslint.glade:1495 ../fslint.glade:1687 ../fslint.glade:1921
 #: ../fslint.glade:2026 ../fslint.glade:2170 ../fslint.glade:2287
 #: ../fslint.glade:2608
 msgid "Name"
-msgstr "Nimi"
+msgstr "Nome"
 
 #: ../fslint.glade:859 ../fslint.glade:1221 ../fslint.glade:1510
 #: ../fslint.glade:1702 ../fslint.glade:1936 ../fslint.glade:2041
 #: ../fslint.glade:2185 ../fslint.glade:2302 ../fslint.glade:2623
 msgid "Directory"
-msgstr "Hakemisto"
+msgstr "Directorio"
 
 #: ../fslint.glade:874 ../fslint.glade:1732 ../fslint.glade:2101
 #: ../fslint.glade:2200 ../fslint.glade:2332 ../fslint.glade:2653
 msgid "Date"
-msgstr "Päiväys"
+msgstr "Data"
 
 #: ../fslint.glade:905
 msgid "Duplicates"
-msgstr "Kaksoiskappaleet"
+msgstr "Duplicados"
 
 #: ../fslint.glade:974 ../fslint.glade:1525 ../fslint.glade:1717
 #: ../fslint.glade:2086 ../fslint.glade:2317 ../fslint.glade:2638
 msgid "Size"
-msgstr "Koko"
+msgstr "Tamaño"
 
 #: ../fslint.glade:1076
 msgid "Installed packages"
-msgstr "Asennetut paketit"
+msgstr "Paquetes instalados"
 
 #: ../fslint.glade:1113
 msgid "Sensitivity="
-msgstr "Herkkyys="
+msgstr "Sensibilidade="
 
 #: ../fslint.glade:1153
 msgid "invalid UTF8 mode?"
-msgstr "Epäkelpo UTF-8-tila?"
+msgstr "Modo UTF8 non válido?"
 
 #: ../fslint.glade:1252
 msgid "Bad names"
-msgstr "Epäkelvot nimet"
+msgstr "Nomes incorrectos"
 
 #: ../fslint.glade:1283
 msgid "Search ("
-msgstr "Etsi ("
+msgstr "Buscar ("
 
 #: ../fslint.glade:1305
 msgid "$PATH"
@@ -150,88 +150,88 @@ msgstr "$PATH"
 
 #: ../fslint.glade:1324
 msgid ") for"
-msgstr "): sisältä"
+msgstr ") para"
 
 #: ../fslint.glade:1367 ../fslint-gui:938
 msgid "Conflicting files"
-msgstr "Ristiriitaiset tiedostot"
+msgstr "Ficheiros conflictivos"
 
 #: ../fslint.glade:1375 ../fslint.glade:1438 ../fslint-gui:936
 #: ../fslint-gui:945
 msgid "Aliases"
-msgstr "Aliakset"
+msgstr "Alcumes"
 
 #: ../fslint.glade:1414 ../fslint-gui:951
 msgid "Case conflicts"
-msgstr "Kirjainkoon aiheuttamat ristiriidat"
+msgstr "Conflictos maiúsculas / minúsculas"
 
 #: ../fslint.glade:1422 ../fslint-gui:947
 msgid "Same names"
-msgstr "Samannimiset"
+msgstr "Nomes iguais"
 
 #: ../fslint.glade:1430 ../fslint-gui:949
 msgid "Same names(ignore case)"
-msgstr "Samannimiset (kirjainkoolla ei väliä)"
+msgstr "Nomes iguais (ignorar maiúsculas e minúsculas)"
 
 #: ../fslint.glade:1556
 msgid "Name clashes"
-msgstr "Nimiristiriidat"
+msgstr "Colisión de nomes"
 
 #: ../fslint.glade:1587
 msgid "More restrictive search for core files"
-msgstr "Rajoittavampi haku muistivedottiedostoille"
+msgstr "Busca máis restrictiva para ficheiros de sistema"
 
 #: ../fslint.glade:1589
 msgid "core file mode?"
-msgstr "Muistivedostiedostotila?"
+msgstr "modo de ficheiro de sistema?"
 
 #: ../fslint.glade:1613
 msgid "days"
-msgstr "päiviä"
+msgstr "días"
 
 #: ../fslint.glade:1633
 msgid "minimum age"
-msgstr "vähimmäisikä"
+msgstr "tempo mínimo"
 
 #: ../fslint.glade:1763
 msgid "Temp files"
-msgstr "Tilapäistiedostot"
+msgstr "Ficheiros temporais"
 
 #: ../fslint.glade:1795
 msgid "Dangling"
-msgstr "Kohteettomat"
+msgstr "Pendente"
 
 #: ../fslint.glade:1813
 msgid "Absolute links to paths within or below the link's directory"
-msgstr "Absoluuttiset linkit polkuihin linkin hakemistossa/alihakemistossa"
+msgstr "Ligazóns absolutas á ruta dentro ou baixo o directorio de ligazóns"
 
 #: ../fslint.glade:1815
 msgid "Suspect"
-msgstr "Epäilty"
+msgstr "Sospeitoso"
 
 #: ../fslint.glade:1835
 msgid "Relative"
-msgstr "Suhteellinen"
+msgstr "Relativa"
 
 #: ../fslint.glade:1855
 msgid "Absolute"
-msgstr "Absoluuttinen"
+msgstr "Absoluta"
 
 #: ../fslint.glade:1874
 msgid "/././. ///// /../ etc."
-msgstr "/././. ///// /../ jne."
+msgstr "/././. ///// /../ etc."
 
 #: ../fslint.glade:1876
 msgid "Redundant naming"
-msgstr "Tarpeeton nimeäminen"
+msgstr "Nomeado redundante"
 
 #: ../fslint.glade:1951
 msgid "Target"
-msgstr "Kohde"
+msgstr "Destino"
 
 #: ../fslint.glade:1982
 msgid "Bad symlinks"
-msgstr "Epäkelvot symlinkit"
+msgstr "Ligazóns incorrectas"
 
 #: ../fslint.glade:2056
 msgid "UID"
@@ -243,333 +243,332 @@ msgstr "GID"
 
 #: ../fslint.glade:2132
 msgid "Bad IDs"
-msgstr "Epäkelvot ID:t"
+msgstr "ID incorrectos"
 
 #: ../fslint.glade:2224
 msgid "Empty directories"
-msgstr "Tyhjät hakemistot"
+msgstr "Directorios baleiros"
 
 #: ../fslint.glade:2250
 msgid "Search $PATH"
-msgstr "Etsi $PATH"
+msgstr "Buscar $PATH"
 
 #: ../fslint.glade:2363
 msgid "Non stripped binaries"
-msgstr "Ohjelmatiedostot, joissa vianjäljityskoodia"
+msgstr "Binarios non optimizados"
 
 #: ../fslint.glade:2445
 msgid "bad indenting for indent width"
-msgstr "epäkelvot sisennykset suhteessa sisennysleveyteen"
+msgstr "sangría incorrecta para a largura do guión"
 
 #: ../fslint.glade:2549
 msgid "whitespace at end of line"
-msgstr "tyhjä tila rivin lopussa"
+msgstr "espazo en branco ao final das liñas"
 
 #: ../fslint.glade:2684
 msgid "Redundant whitespace"
-msgstr "Tarpeeton tyhjä tila"
+msgstr "Espazos en branco redundantes"
 
 #: ../fslint.glade:2767
 msgid "Find"
-msgstr "Etsi"
+msgstr "Buscar"
 
 #: ../fslint.glade:2842
 msgid "Stop"
-msgstr "Pysäytä"
+msgstr "Deter"
 
 #: ../fslint.glade:2917
 msgid "Pause"
-msgstr "Keskeytä"
+msgstr "Pausar"
 
 #: ../fslint.glade:2992
 msgid "Resume"
-msgstr "Jatka"
+msgstr "Continuar"
 
 #: ../fslint.glade:3081
 msgid "Select"
-msgstr "Valitse"
+msgstr "Seleccionar"
 
 #: ../fslint.glade:3108
 msgid "Save (selected) list to file"
-msgstr "Tallenna (valittu) lista tiedostoon"
+msgstr "Gardar a lista (seleccionada) nun ficheiro"
 
 #: ../fslint.glade:3153
 msgid "Save"
-msgstr "Tallenna"
+msgstr "Gardar"
 
 #: ../fslint.glade:3180 ../fslint.glade:3324
 msgid "selected"
-msgstr "valitut"
+msgstr "seleccionado"
 
 #: ../fslint.glade:3225
 msgid "Delete"
-msgstr "Poista"
+msgstr "Borrar"
 
 #: ../fslint.glade:3252
 msgid ""
 "All (except selected) using hardlinks\n"
 "(or symlinks if on a different filesystem)"
 msgstr ""
-"Kaikki (paitsi valitut) käyttäen hardlinkkejä\n"
-"(tai symbolisia linkkejä jos eri tiedostojärjestelmällä)"
+"Todos (excepto os seleccionados) usando ligazóns absolutas\n"
+"(ou ligazóns relativas se esta nun ficheiro de sistema diferente)"
 
 #: ../fslint.glade:3298
 msgid "Merge"
-msgstr "Yhdistä"
+msgstr "Combinar"
 
 #: ../fslint.glade:3369
 msgid "Clean"
-msgstr "Puhdista"
+msgstr "Limpar"
 
 #: ../fslint.glade:3502
 msgid "Select Path"
-msgstr "Valitse polku"
+msgstr "Seleccionar ruta"
 
 #: ../fslint.glade:3674
 msgid "ask me this in future?"
-msgstr "kysy myös jatkossa?"
+msgstr "preguntar máis adiante?"
 
 #: ../fslint-gui:156
 #, python-format
 msgid "Usage: %s [OPTION] [PATHS]"
-msgstr "Käyttö: %s [OPTION] [PATHS]"
+msgstr "Uso: %s [OPTION] [PATHS]"
 
 #: ../fslint-gui:157
 msgid "display version"
-msgstr "näytä versio"
+msgstr "mostra a versión"
 
 #: ../fslint-gui:158
 msgid "display help"
-msgstr "näytä ohje"
+msgstr "mostra a axuda"
 
 #: ../fslint-gui:397
 #, python-format
 msgid "%(percent)s of %(disk)s is used leaving %(size)sB available"
-msgstr ""
-"%(percent)s prosenttia kiintolevystä %(disk)s on käytössä jättäen vapaaksi "
-"%(size)sB"
+msgstr "Usase %(percent)s de %(disk)s deixando %(size)sB dispoñible"
 
 #: ../fslint-gui:523
 msgid "Do you want to overwrite?\n"
-msgstr "Haluatko korvata?\n"
+msgstr "Desexa sobrescribilo?\n"
 
 #: ../fslint-gui:529
 msgid "You can't overwrite "
-msgstr "Et voi korvata "
+msgstr "Non pode sobrescribilo "
 
 #: ../fslint-gui:565
 msgid "Files with the same content"
-msgstr "Samansisältöiset tiedostot"
+msgstr "Ficheiros co mesmo contido"
 
 #: ../fslint-gui:566
 msgid "Installed packages ordered by disk usage"
-msgstr "Koon mukaan järjestetty listaus asennetuista ohjelmapaketeista"
+msgstr "Paquetes instalados ordenados por uso do disco"
 
 #: ../fslint-gui:567
 msgid "Problematic filenames"
-msgstr "Ongelmalliset tiedostonimet"
+msgstr "Nomes de ficheiro problemáticos"
 
 #: ../fslint-gui:568
 msgid "Possibly conflicting commands or filenames"
-msgstr "Mahdollisesti ristiriitaiset komennot tai tiedostonimet"
+msgstr "Posiblemente ordes ou nomes conflictivos"
 
 #: ../fslint-gui:569
 msgid "Possibly old temporary files"
-msgstr "Mahdollisesti vanhat tilapäistiedostot"
+msgstr "Posiblemente ficheiro temporais antigos"
 
 #: ../fslint-gui:570
 msgid "Problematic symbolic links"
-msgstr "Ongelmalliset symboliset linkit"
+msgstr "Ligazóns relativas problematicas"
 
 #: ../fslint-gui:571
 msgid "Files with missing user IDs"
-msgstr "Tiedostot joista puuttuu käyttäjän ID"
+msgstr "Ficheiros con ID de usuario perdido"
 
 #: ../fslint-gui:572
 msgid "Directory branches with no files"
-msgstr "Hakemistoja ilman tiedostoja"
+msgstr "Ramas do directorio sen ficheiros"
 
 #: ../fslint-gui:573
 msgid "Executables still containing debugging info"
-msgstr "Suoritettavat tiedostot jotka sisältävät yhä vianjäljitystietoa"
+msgstr "Executables que aínda conteñen información de depuración"
 
 #: ../fslint-gui:574
 msgid "Erroneous whitespace in a text file"
-msgstr "Virheellisesti tyhjää tilaa tekstitiedostossa"
+msgstr "Espazo en branco erroneo nun ficheiro de texto"
 
 #: ../fslint-gui:580
 msgid "Invalid path ["
-msgstr "Virheellinen polku ["
+msgstr "Ruta non válida ["
 
 #: ../fslint-gui:621 ../fslint-gui:1312
 msgid "searching"
-msgstr "etsitään"
+msgstr "buscando"
 
 #: ../fslint-gui:638
 msgid "processing..."
-msgstr "käsitellään..."
+msgstr "procesando..."
 
 #: ../fslint-gui:666
 msgid "No search paths specified"
-msgstr "Hakupolku määrittämättä"
+msgstr "Rutas de busca non especificadas"
 
 #: ../fslint-gui:810
 msgid ""
 "Sorry, FSlint does not support this functionality on your system at present."
-msgstr "FSlint ei tue tätä toimintoa järjestelmässäsi toistaiseksi."
+msgstr ""
+"FSlint, neste momento, non é compatible con esta funcionalidade no seu "
+"sistema"
 
 #: ../fslint-gui:831
 msgid " packages, "
-msgstr " paketit, "
+msgstr " paquetes, "
 
 #: ../fslint-gui:832
 #, python-format
 msgid "consuming %sB. "
-msgstr "käyttäen %sB. "
+msgstr "consumindo %sB. "
 
 #: ../fslint-gui:833
 #, python-format
 msgid "Note %s."
-msgstr "Huomaa %s."
+msgstr "Nota %s."
 
 #: ../fslint-gui:852 ../fslint-gui:892 ../fslint-gui:930 ../fslint-gui:992
 msgid " files"
-msgstr " tiedostoa"
+msgstr " ficheiros"
 
 #: ../fslint-gui:872
 msgid " unstripped binaries"
-msgstr " Vianjäljityskoodatut binäärit"
+msgstr " binarios non optimizados"
 
 #: ../fslint-gui:881
 msgid " empty directories"
-msgstr " tyhjiä hakemistoja"
+msgstr " directorios baleiros"
 
 #: ../fslint-gui:913
 msgid " links"
-msgstr " linkkejä"
+msgstr " ligazóns"
 
 #: ../fslint-gui:929 ../fslint-gui:1045
 msgid " bytes wasted in "
-msgstr " tarvua hukkakäytössä "
+msgstr " bytes perdidos en "
 
 #: ../fslint-gui:975 ../fslint-gui:1046
 msgid " files (in "
-msgstr " tiedostoa ( "
+msgstr " ficheiros (en "
 
 #: ../fslint-gui:976 ../fslint-gui:1047
 msgid " groups)"
-msgstr " ryhmässä)"
+msgstr " grupos)"
 
 #: ../fslint-gui:1037
 msgid "bytes wasted"
-msgstr "tavua hukkakäytössä"
+msgstr "bytes perdidos"
 
 #: ../fslint-gui:1124
 msgid "None selected"
-msgstr "Ei kohteita valittuna"
+msgstr "Ningún selecccionado"
 
 #: ../fslint-gui:1128
 msgid " this item?\n"
-msgstr " tämä kohde?\n"
+msgstr " este elemento?\n"
 
 #: ../fslint-gui:1130
 #, python-format
 msgid " these %d items?\n"
-msgstr " nämä %d kohteet?\n"
+msgstr " estos %d elementos?\n"
 
 #: ../fslint-gui:1278
 msgid "User aborted"
-msgstr "Käyttäjän keskeytys"
+msgstr "Interrompido polo usuario"
 
 #: ../fslint-gui:1305
 msgid "paused"
-msgstr "keskeytetty"
+msgstr "detido"
 
 #: ../fslint-gui:1452
 msgid "Error starting xdg-open"
-msgstr "Virhe käynnistettäessä ohjelmaa xdg-open"
+msgstr "Erro iniciando xdg-open"
 
 #: ../fslint-gui:1464
 msgid "Rename:"
-msgstr "Nimeä uudelleen:"
+msgstr "Renomear:"
 
 #: ../fslint-gui:1475 ../fslint-gui:1516
 #, python-format
 msgid "Error: [%s] can not be represented on your file system"
-msgstr "Virhe: [%s] ei voi esiintyä tiedostojärjestelmässäsi"
+msgstr "Erro: [%s] non pode representarse no seu sistema de ficheiros"
 
 #: ../fslint-gui:1485
 #, python-format
 msgid "Error: Can't rename [%(old_path)s] as [%(new_path)s] exists"
 msgstr ""
-"Virhe: Ei voi uudelleen nimetä [%(old_path)s] koska [%(new_path)s] on jo "
-"olemassa"
+"Erro: non pode renomearse [%(old_path)s] como [%(new_path)s], xa existe"
 
 #: ../fslint-gui:1505
 msgid "wildcard:"
-msgstr "jokerimerkki:"
+msgstr "comodín:"
 
 #: ../fslint-gui:1710
 msgid "Sorry, you must be root to delete system packages."
-msgstr "Vain pääkäyttäjä voi poistaa järjestelmästä ohjelmapaketteja."
+msgstr "Sintoo, vostede debe ser root para borrar os paquetes de sistema."
 
 #: ../fslint-gui:1715
 msgid "Are you sure you want to delete"
-msgstr "Haluatko varmasti poistaa"
+msgstr "Esta seguro de querer borralos"
 
 #: ../fslint-gui:1722
 msgid "Are you sure you want to delete all items in this group?"
-msgstr "Haluatko varmasti poistaa kaikki kohteet tässä ryhmässä?"
+msgstr "Está seguro de que quere eliminar todos os elementos deste grupo?"
 
 #: ../fslint-gui:1742
 msgid "Calculating dependencies..."
-msgstr "Tarkastetaan riippuvaisuuksia..."
+msgstr "Calculando as dependencias..."
 
 #: ../fslint-gui:1760
 #, python-format
 msgid "%d extra packages need to be deleted.\n"
-msgstr "%d ylimääräistä pakettia pitää poistaa.\n"
+msgstr "%d paquetes extra que necesitan ser borrados.\n"
 
 #: ../fslint-gui:1761
 msgid "Please review the updated selection."
-msgstr "Tarkista päivitetty valinta."
+msgstr "Por favor revise a selección actualizada."
 
 #: ../fslint-gui:1769
 msgid "Removing packages..."
-msgstr "Poistetaan paketteja..."
+msgstr "Eliminando paquetes..."
 
 #: ../fslint-gui:1814
 msgid " items deleted"
-msgstr " kohdetta poistettu"
+msgstr " elementos borrados"
 
 #: ../fslint-gui:1827
 msgid "Are you sure you want to merge ALL files?\n"
-msgstr "Haluatko varmasti yhdistää KAIKKI tiedostot?\n"
+msgstr "Está seguro de que quere combinar TODOS os ficheros?\n"
 
 #: ../fslint-gui:1831
 msgid "(Ignoring those selected)\n"
-msgstr "(jätetään valitut huomiotta)\n"
+msgstr "(Ignorando aqueles seleccionados)\n"
 
 #: ../fslint-gui:1879
 msgid "Which indenting method do you want to convert to?"
-msgstr "Mihin sisennystapaan haluat muuntaa?"
+msgstr "Con que método de sangrado desexa convertilo?"
 
 #: ../fslint-gui:1880
 msgid "Tabs"
-msgstr "Välilehdet"
+msgstr "Tabulacións"
 
 #: ../fslint-gui:1880
 msgid "Spaces"
-msgstr "Välilyönnit"
+msgstr "Espazos"
 
 #: ../fslint-gui:1891
 msgid "Are you sure you want to clean"
-msgstr "Haluatko varmasti puhdistaa"
+msgstr "Esta seguro de que quere limpialos"
 
 #: ../fslint-gui:1936
 msgid " items cleaned ("
-msgstr " kohdetta puhdistettu ("
+msgstr " elementos limpados ("
 
 #: ../fslint-gui:1937
 msgid " bytes saved)"
-msgstr " tavua vapautettu)"
+msgstr " bytes gardados)"
