--- a/po/nl.po
+++ b/po/nl.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: fslint\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-07-17 22:22+0100\n"
-"PO-Revision-Date: 2009-05-05 07:17+0000\n"
-"Last-Translator: Dirk Tas <Unknown>\n"
+"PO-Revision-Date: 2009-08-13 19:03+0000\n"
+"Last-Translator: Wimsito <wimsito@gmail.com>\n"
 "Language-Team: Dutch <vertaling@nl.linux.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2009-07-13 00:20+0000\n"
+"X-Launchpad-Export-Date: 2010-04-15 11:44+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: ../fslint.glade:8
@@ -23,7 +23,7 @@ msgstr "FSlint"
 
 #: ../fslint.glade:77
 msgid "Open _Folder"
-msgstr ""
+msgstr "_Map openen"
 
 #: ../fslint.glade:107
 msgid "_Rename..."
@@ -39,7 +39,7 @@ msgstr "Deselecteren met gebruik van jokertekens"
 
 #: ../fslint.glade:148
 msgid "within groups"
-msgstr "groepen"
+msgstr "in groepen"
 
 #: ../fslint.glade:157
 msgid "Select all but first"
@@ -280,11 +280,11 @@ msgstr "Stoppen"
 
 #: ../fslint.glade:2917
 msgid "Pause"
-msgstr ""
+msgstr "Pauzeren"
 
 #: ../fslint.glade:2992
 msgid "Resume"
-msgstr ""
+msgstr "Hervatten"
 
 #: ../fslint.glade:3081
 msgid "Select"
@@ -386,7 +386,7 @@ msgstr "Bestanden zonder gebruikers ID"
 
 #: ../fslint-gui:572
 msgid "Directory branches with no files"
-msgstr ""
+msgstr "Maptakken zonder bestanden"
 
 #: ../fslint-gui:573
 msgid "Executables still containing debugging info"
@@ -483,7 +483,7 @@ msgstr "Afgebroken door gebruiker"
 
 #: ../fslint-gui:1305
 msgid "paused"
-msgstr ""
+msgstr "gepauzeerd"
 
 #: ../fslint-gui:1452
 msgid "Error starting xdg-open"
@@ -518,7 +518,7 @@ msgstr "Weet je zeker dat je wilt verwijderen"
 
 #: ../fslint-gui:1722
 msgid "Are you sure you want to delete all items in this group?"
-msgstr ""
+msgstr "Bent u zeker dat u alle items in deze groep wil verwijderen?"
 
 #: ../fslint-gui:1742
 msgid "Calculating dependencies..."
