--- a/po/ru.po
+++ b/po/ru.po
@@ -8,12 +8,14 @@ msgstr ""
 "Project-Id-Version: fslint\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-07-17 22:22+0100\n"
-"PO-Revision-Date: 2007-09-18 20:55+0300\n"
-"Last-Translator: Dmitry Beketov <bds@bk.ru>\n"
+"PO-Revision-Date: 2009-11-13 22:55+0000\n"
+"Last-Translator: Petron <Unknown>\n"
 "Language-Team: Russian <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Launchpad-Export-Date: 2010-04-15 11:44+0000\n"
+"X-Generator: Launchpad (build Unknown)\n"
 
 #: ../fslint.glade:8
 msgid "FSlint"
@@ -21,7 +23,7 @@ msgstr "FSlint"
 
 #: ../fslint.glade:77
 msgid "Open _Folder"
-msgstr ""
+msgstr "Открыть _каталог"
 
 #: ../fslint.glade:107
 msgid "_Rename..."
@@ -161,7 +163,7 @@ msgstr "Ссылки"
 
 #: ../fslint.glade:1414 ../fslint-gui:951
 msgid "Case conflicts"
-msgstr ""
+msgstr "Конфликт регистра"
 
 #: ../fslint.glade:1422 ../fslint-gui:947
 msgid "Same names"
@@ -169,7 +171,7 @@ msgstr "Одинаковые имена"
 
 #: ../fslint.glade:1430 ../fslint-gui:949
 msgid "Same names(ignore case)"
-msgstr ""
+msgstr "Дубликаты (регистр игнорирован)"
 
 #: ../fslint.glade:1556
 msgid "Name clashes"
@@ -197,7 +199,7 @@ msgstr "Временные файлы"
 
 #: ../fslint.glade:1795
 msgid "Dangling"
-msgstr ""
+msgstr "Висящие"
 
 #: ../fslint.glade:1813
 msgid "Absolute links to paths within or below the link's directory"
@@ -277,11 +279,11 @@ msgstr "Стоп"
 
 #: ../fslint.glade:2917
 msgid "Pause"
-msgstr ""
+msgstr "Пауза"
 
 #: ../fslint.glade:2992
 msgid "Resume"
-msgstr ""
+msgstr "Продолжить"
 
 #: ../fslint.glade:3081
 msgid "Select"
@@ -325,7 +327,7 @@ msgstr "Выберите путь"
 
 #: ../fslint.glade:3674
 msgid "ask me this in future?"
-msgstr ""
+msgstr "Спросить об этом позже?"
 
 #: ../fslint-gui:156
 #, python-format
@@ -344,6 +346,7 @@ msgstr "показывать помощь"
 #, python-format
 msgid "%(percent)s of %(disk)s is used leaving %(size)sB available"
 msgstr ""
+"%(percent)s использовано на %(disk)s, осталось %(size)sB свободного места"
 
 #: ../fslint-gui:523
 msgid "Do you want to overwrite?\n"
@@ -383,7 +386,7 @@ msgstr "Файлы с неверными идентификаторами вла
 
 #: ../fslint-gui:572
 msgid "Directory branches with no files"
-msgstr ""
+msgstr "Каталоги без файлов"
 
 #: ../fslint-gui:573
 msgid "Executables still containing debugging info"
@@ -479,11 +482,11 @@ msgstr "Остановлено пользователем"
 
 #: ../fslint-gui:1305
 msgid "paused"
-msgstr ""
+msgstr "приостановлен"
 
 #: ../fslint-gui:1452
 msgid "Error starting xdg-open"
-msgstr ""
+msgstr "Ошибка запуска xdg-open"
 
 #: ../fslint-gui:1464
 msgid "Rename:"
@@ -516,7 +519,7 @@ msgstr "Вы уверены, что хотите удалить"
 
 #: ../fslint-gui:1722
 msgid "Are you sure you want to delete all items in this group?"
-msgstr ""
+msgstr "Вы действительно желаете удалить все элементы в данной группе?"
 
 #: ../fslint-gui:1742
 msgid "Calculating dependencies..."
