--- a/po/cs.po
+++ b/po/cs.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: fslint\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-07-17 22:22+0100\n"
-"PO-Revision-Date: 2009-07-19 23:49+0000\n"
+"PO-Revision-Date: 2009-09-19 23:53+0000\n"
 "Last-Translator: Roman Horník <roman.hornik@gmail.com>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2009-07-27 11:48+0000\n"
+"X-Launchpad-Export-Date: 2010-04-15 11:44+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: ../fslint.glade:8
@@ -23,7 +23,7 @@ msgstr "FSlint"
 
 #: ../fslint.glade:77
 msgid "Open _Folder"
-msgstr ""
+msgstr "Otevřít _Složku"
 
 #: ../fslint.glade:107
 msgid "_Rename..."
@@ -279,11 +279,11 @@ msgstr "Stop"
 
 #: ../fslint.glade:2917
 msgid "Pause"
-msgstr ""
+msgstr "Pozastavit"
 
 #: ../fslint.glade:2992
 msgid "Resume"
-msgstr ""
+msgstr "Pokračovat"
 
 #: ../fslint.glade:3081
 msgid "Select"
@@ -481,7 +481,7 @@ msgstr "Přerušeno uživatelem"
 
 #: ../fslint-gui:1305
 msgid "paused"
-msgstr ""
+msgstr "pozastaveno"
 
 #: ../fslint-gui:1452
 msgid "Error starting xdg-open"
@@ -515,7 +515,7 @@ msgstr "Jste si jisti, že chcete smazat"
 
 #: ../fslint-gui:1722
 msgid "Are you sure you want to delete all items in this group?"
-msgstr ""
+msgstr "Jste si jisti smazáním všech položek v této skupině?"
 
 #: ../fslint-gui:1742
 msgid "Calculating dependencies..."
