--- a/po/de.po
+++ b/po/de.po
@@ -6,13 +6,13 @@ msgstr ""
 "Project-Id-Version: fslint\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-07-17 22:22+0100\n"
-"PO-Revision-Date: 2008-06-18 16:05+0200\n"
-"Last-Translator: Vinzenz Vietzke <vinz@v1nz.org>\n"
+"PO-Revision-Date: 2009-11-11 20:14+0000\n"
+"Last-Translator: eknus <michael.sunke@gmx.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2008-07-11 11:00+0000\n"
+"X-Launchpad-Export-Date: 2010-04-15 11:44+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: ../fslint.glade:8
@@ -21,7 +21,7 @@ msgstr "FSlint"
 
 #: ../fslint.glade:77
 msgid "Open _Folder"
-msgstr ""
+msgstr "Ordner öffnen"
 
 #: ../fslint.glade:107
 msgid "_Rename..."
@@ -279,11 +279,11 @@ msgstr "Stopp"
 
 #: ../fslint.glade:2917
 msgid "Pause"
-msgstr ""
+msgstr "Pause"
 
 #: ../fslint.glade:2992
 msgid "Resume"
-msgstr ""
+msgstr "Fortsetzen"
 
 #: ../fslint.glade:3081
 msgid "Select"
@@ -397,7 +397,7 @@ msgstr "Fehlerhafte Leerzeichen in einer Text-Datei"
 
 #: ../fslint-gui:580
 msgid "Invalid path ["
-msgstr "Unzulässiger Pfad ["
+msgstr "Unzulässiger Pfad"
 
 #: ../fslint-gui:621 ../fslint-gui:1312
 msgid "searching"
@@ -483,11 +483,11 @@ msgstr "Abbruch durch Benutzer"
 
 #: ../fslint-gui:1305
 msgid "paused"
-msgstr ""
+msgstr "Pausiert"
 
 #: ../fslint-gui:1452
 msgid "Error starting xdg-open"
-msgstr ""
+msgstr "Fehler beim Starten von xdg-open"
 
 #: ../fslint-gui:1464
 msgid "Rename:"
@@ -496,7 +496,7 @@ msgstr "Umbenennen:"
 #: ../fslint-gui:1475 ../fslint-gui:1516
 #, python-format
 msgid "Error: [%s] can not be represented on your file system"
-msgstr "Fehler: [%s] kann auf Ihrem Dateisystem nicht dargestellt werden"
+msgstr "Fehler: [%s] kann auf ihrem Dateisystem nicht dargestellt werden."
 
 #: ../fslint-gui:1485
 #, python-format
@@ -507,7 +507,7 @@ msgstr ""
 
 #: ../fslint-gui:1505
 msgid "wildcard:"
-msgstr "Platzhalter:"
+msgstr "Platzhalter"
 
 #: ../fslint-gui:1710
 msgid "Sorry, you must be root to delete system packages."
