--- a/po/el.po
+++ b/po/el.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: fslint\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-07-17 22:22+0100\n"
-"PO-Revision-Date: 2009-06-15 07:47+0000\n"
-"Last-Translator: Fotis Tsamis <Unknown>\n"
+"PO-Revision-Date: 2010-02-15 20:55+0000\n"
+"Last-Translator: thunk <thunk77@gmail.com>\n"
 "Language-Team: Greek <el@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2009-07-13 00:20+0000\n"
+"X-Launchpad-Export-Date: 2010-04-15 11:44+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: ../fslint.glade:8
@@ -23,11 +23,11 @@ msgstr "FSlint"
 
 #: ../fslint.glade:77
 msgid "Open _Folder"
-msgstr "Άνοιγμα _φάκελος"
+msgstr "Άνοιγμα _φακέλου"
 
 #: ../fslint.glade:107
 msgid "_Rename..."
-msgstr "_Μετονομασία..."
+msgstr "Μετο_νομασία..."
 
 #: ../fslint.glade:130
 msgid "Select using wildcard"
@@ -281,11 +281,11 @@ msgstr "Διακοπή"
 
 #: ../fslint.glade:2917
 msgid "Pause"
-msgstr ""
+msgstr "Παύση"
 
 #: ../fslint.glade:2992
 msgid "Resume"
-msgstr ""
+msgstr "Συνέχεια"
 
 #: ../fslint.glade:3081
 msgid "Select"
@@ -484,7 +484,7 @@ msgstr "Ακυρώθηκε από τον χρήστη"
 
 #: ../fslint-gui:1305
 msgid "paused"
-msgstr ""
+msgstr "σε παύση"
 
 #: ../fslint-gui:1452
 msgid "Error starting xdg-open"
@@ -520,7 +520,7 @@ msgstr "Θέλετε σίγουρα να διαγράψετε"
 
 #: ../fslint-gui:1722
 msgid "Are you sure you want to delete all items in this group?"
-msgstr ""
+msgstr "Είστε σίγουροι οτι θέλετε να διαγράψετε όλα τα αντικείμενα σε αυτό το γκρούπ;"
 
 #: ../fslint-gui:1742
 msgid "Calculating dependencies..."
