--- a/po/fr.po
+++ b/po/fr.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: fslint\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-07-17 22:22+0100\n"
-"PO-Revision-Date: 2009-07-05 07:29+0000\n"
-"Last-Translator: jamaique <Unknown>\n"
+"PO-Revision-Date: 2009-10-04 17:47+0000\n"
+"Last-Translator: François Blondel <Unknown>\n"
 "Language-Team: French <traduc@traduc.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2009-07-13 00:20+0000\n"
+"X-Launchpad-Export-Date: 2010-04-15 11:44+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: ../fslint.glade:8
@@ -23,7 +23,7 @@ msgstr "FSlint"
 
 #: ../fslint.glade:77
 msgid "Open _Folder"
-msgstr ""
+msgstr "Ouvrir le _dossier"
 
 #: ../fslint.glade:107
 msgid "_Rename..."
@@ -279,11 +279,11 @@ msgstr "Stopper"
 
 #: ../fslint.glade:2917
 msgid "Pause"
-msgstr ""
+msgstr "Suspendre"
 
 #: ../fslint.glade:2992
 msgid "Resume"
-msgstr ""
+msgstr "Reprendre"
 
 #: ../fslint.glade:3081
 msgid "Select"
@@ -481,7 +481,7 @@ msgstr "Arrêt par l'usager"
 
 #: ../fslint-gui:1305
 msgid "paused"
-msgstr ""
+msgstr "suspendu"
 
 #: ../fslint-gui:1452
 msgid "Error starting xdg-open"
@@ -515,7 +515,7 @@ msgstr "Êtes-vous certain de vouloir détruire"
 
 #: ../fslint-gui:1722
 msgid "Are you sure you want to delete all items in this group?"
-msgstr ""
+msgstr "Êtes-vous sur de vouloir supprimer tout les éléments de ce groupe ?"
 
 #: ../fslint-gui:1742
 msgid "Calculating dependencies..."
