--- a/po/he.po
+++ b/po/he.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: fslint\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-07-17 22:22+0100\n"
-"PO-Revision-Date: 2008-11-07 00:12+0000\n"
+"PO-Revision-Date: 2010-02-22 10:15+0000\n"
 "Last-Translator: Yaron <sh.yaron@gmail.com>\n"
 "Language-Team: Hebrew <he@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2009-07-13 00:20+0000\n"
+"X-Launchpad-Export-Date: 2010-04-15 11:44+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: ../fslint.glade:8
@@ -23,7 +23,7 @@ msgstr "FSlint"
 
 #: ../fslint.glade:77
 msgid "Open _Folder"
-msgstr ""
+msgstr "פתיחת _תיקייה"
 
 #: ../fslint.glade:107
 msgid "_Rename..."
@@ -280,11 +280,11 @@ msgstr "הפסקת החיפוש"
 
 #: ../fslint.glade:2917
 msgid "Pause"
-msgstr ""
+msgstr "השהיה"
 
 #: ../fslint.glade:2992
 msgid "Resume"
-msgstr ""
+msgstr "המשך"
 
 #: ../fslint.glade:3081
 msgid "Select"
@@ -386,7 +386,7 @@ msgstr "קבצים ללא זיהוי משתמש (ID)"
 
 #: ../fslint-gui:572
 msgid "Directory branches with no files"
-msgstr ""
+msgstr "תיקיות ללא קבצים"
 
 #: ../fslint-gui:573
 msgid "Executables still containing debugging info"
@@ -482,7 +482,7 @@ msgstr "המשתמש הפסיק"
 
 #: ../fslint-gui:1305
 msgid "paused"
-msgstr ""
+msgstr "מושהה"
 
 #: ../fslint-gui:1452
 msgid "Error starting xdg-open"
@@ -517,7 +517,7 @@ msgstr "האם באמת למחוק?"
 
 #: ../fslint-gui:1722
 msgid "Are you sure you want to delete all items in this group?"
-msgstr ""
+msgstr "האם למחוק את כל הפריטים בקבוצה זו?"
 
 #: ../fslint-gui:1742
 msgid "Calculating dependencies..."
