--- a/po/ms.po
+++ b/po/ms.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: fslint 2.26\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-07-17 22:22+0100\n"
-"PO-Revision-Date: 2008-05-21 22:20+0000\n"
-"Last-Translator: Sharuzzaman Ahmat Raslan <sharuzzaman@myrealbox.com>\n"
+"PO-Revision-Date: 2009-10-04 02:51+0000\n"
+"Last-Translator: nazriu <Unknown>\n"
 "Language-Team: Malay <translation-team-ms@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2008-07-11 11:00+0000\n"
+"X-Launchpad-Export-Date: 2010-04-15 11:44+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: ../fslint.glade:8
@@ -23,7 +23,7 @@ msgstr "FSlint"
 
 #: ../fslint.glade:77
 msgid "Open _Folder"
-msgstr ""
+msgstr "buka folder"
 
 #: ../fslint.glade:107
 msgid "_Rename..."
@@ -279,11 +279,11 @@ msgstr "Henti"
 
 #: ../fslint.glade:2917
 msgid "Pause"
-msgstr ""
+msgstr "Pause"
 
 #: ../fslint.glade:2992
 msgid "Resume"
-msgstr ""
+msgstr "Teruskan"
 
 #: ../fslint.glade:3081
 msgid "Select"
@@ -385,7 +385,7 @@ msgstr "Fail dengan user ID hilang"
 
 #: ../fslint-gui:572
 msgid "Directory branches with no files"
-msgstr ""
+msgstr "Bahagian Direktori yang tidak mempunyai sebarang fail"
 
 #: ../fslint-gui:573
 msgid "Executables still containing debugging info"
@@ -481,11 +481,11 @@ msgstr "Pengguna dibatalkan"
 
 #: ../fslint-gui:1305
 msgid "paused"
-msgstr ""
+msgstr "paused"
 
 #: ../fslint-gui:1452
 msgid "Error starting xdg-open"
-msgstr ""
+msgstr "Error membuka xdg-open"
 
 #: ../fslint-gui:1464
 msgid "Rename:"
@@ -516,7 +516,7 @@ msgstr "Anda pasti untuk memadam"
 
 #: ../fslint-gui:1722
 msgid "Are you sure you want to delete all items in this group?"
-msgstr ""
+msgstr "Anda pasti ingin membuang semua item dalam kumpulan ini?"
 
 #: ../fslint-gui:1742
 msgid "Calculating dependencies..."
