--- a/po/sv.po
+++ b/po/sv.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: fslint\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-07-17 22:22+0100\n"
-"PO-Revision-Date: 2008-10-27 11:40+0000\n"
-"Last-Translator: Daniel Nylander <yeager@ubuntu.com>\n"
+"PO-Revision-Date: 2009-09-27 00:51+0000\n"
+"Last-Translator: stampe <mikael.m.carlsson@gmail.com>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2009-07-13 00:20+0000\n"
+"X-Launchpad-Export-Date: 2010-04-15 11:44+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: ../fslint.glade:8
@@ -23,7 +23,7 @@ msgstr "FSlint"
 
 #: ../fslint.glade:77
 msgid "Open _Folder"
-msgstr ""
+msgstr "Öppna _mapp"
 
 #: ../fslint.glade:107
 msgid "_Rename..."
@@ -281,11 +281,11 @@ msgstr "Stopp"
 
 #: ../fslint.glade:2917
 msgid "Pause"
-msgstr ""
+msgstr "Paus"
 
 #: ../fslint.glade:2992
 msgid "Resume"
-msgstr ""
+msgstr "Fortsätt"
 
 #: ../fslint.glade:3081
 msgid "Select"
@@ -486,7 +486,7 @@ msgstr "Användaren avbröt"
 
 #: ../fslint-gui:1305
 msgid "paused"
-msgstr ""
+msgstr "pausad"
 
 #: ../fslint-gui:1452
 msgid "Error starting xdg-open"
@@ -521,7 +521,7 @@ msgstr "Är du säker att du vill ta bort"
 
 #: ../fslint-gui:1722
 msgid "Are you sure you want to delete all items in this group?"
-msgstr ""
+msgstr "Är du säker på att du vill ta bort alla poster i den här gruppen?"
 
 #: ../fslint-gui:1742
 msgid "Calculating dependencies..."
