--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -7,13 +7,13 @@ msgstr ""
 "Project-Id-Version: fslint\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-07-17 22:22+0100\n"
-"PO-Revision-Date: 2009-02-14 13:37+0000\n"
-"Last-Translator: rainofchaos <rainofchaos@gmail.com>\n"
+"PO-Revision-Date: 2009-10-26 07:05+0000\n"
+"Last-Translator: Kyle WANG <waxaca@163.com>\n"
 "Language-Team: Seann Liu <Seann.Liu@gmail.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2009-07-13 00:20+0000\n"
+"X-Launchpad-Export-Date: 2010-04-15 11:44+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: ../fslint.glade:8
@@ -22,11 +22,11 @@ msgstr "FSlint"
 
 #: ../fslint.glade:77
 msgid "Open _Folder"
-msgstr ""
+msgstr "打开文件夹(_F)"
 
 #: ../fslint.glade:107
 msgid "_Rename..."
-msgstr "重命名(_R)"
+msgstr "重命名(_R)..."
 
 #: ../fslint.glade:130
 msgid "Select using wildcard"
@@ -42,15 +42,15 @@ msgstr "组中"
 
 #: ../fslint.glade:157
 msgid "Select all but first"
-msgstr "除了第一个外全选"
+msgstr "除第一个外全选"
 
 #: ../fslint.glade:166
 msgid "Select all but newest"
-msgstr "除了最新的外全选"
+msgstr "除最新的外全选"
 
 #: ../fslint.glade:175
 msgid "Select all but oldest"
-msgstr "除了最老的外全选"
+msgstr "除最老的外全选"
 
 #: ../fslint.glade:188
 msgid "Toggle selection"
@@ -279,11 +279,11 @@ msgstr "停止"
 
 #: ../fslint.glade:2917
 msgid "Pause"
-msgstr ""
+msgstr "暂停"
 
 #: ../fslint.glade:2992
 msgid "Resume"
-msgstr ""
+msgstr "恢复"
 
 #: ../fslint.glade:3081
 msgid "Select"
@@ -385,7 +385,7 @@ msgstr "缺少用户IDs的文件"
 
 #: ../fslint-gui:572
 msgid "Directory branches with no files"
-msgstr ""
+msgstr "不含文件的目录分支"
 
 #: ../fslint-gui:573
 msgid "Executables still containing debugging info"
@@ -481,7 +481,7 @@ msgstr "用户取消"
 
 #: ../fslint-gui:1305
 msgid "paused"
-msgstr ""
+msgstr "已暂停"
 
 #: ../fslint-gui:1452
 msgid "Error starting xdg-open"
@@ -515,7 +515,7 @@ msgstr "确定要删除吗？"
 
 #: ../fslint-gui:1722
 msgid "Are you sure you want to delete all items in this group?"
-msgstr ""
+msgstr "您确定您想要删除该组中的所有项目？"
 
 #: ../fslint-gui:1742
 msgid "Calculating dependencies..."
